resolve config problems

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PREFIX=!
 TOKEN=NzU3MzAxOTIwOTg4OTIxODc2.X2eaXw.sclrL0wNzageoU_78EseI7akFNI
-ADMIN=440555362005811200
-ADMIN_NAME_TAG=jossl1#7769
+ADMIN_ID=440555362005811200
+ADMIN_TAG=jossl1#7769
 CHANNEL_GENERAL=757317012551893067
-CHANNEL_BIENVENUE=757506899095584888
+CHANNEL_WELCOME=757506899095584888
