--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PREFIX=!
-TOKEN=NzU3MzAxOTIwOTg4OTIxODc2.X2eaXw.sclrL0wNzageoU_78EseI7akFNI
-ADMIN_ID=440555362005811200
-ADMIN_TAG=jossl1#7769
-CHANNEL_GENERAL=757317012551893067
-CHANNEL_WELCOME=757506899095584888
-CHANNEL_ERRORS=759691370885152778
-CHANNEL_ACTIONS=759693281302282281
+TOKEN=<YOUR_TOKEN>
+ADMIN_ID=<YOUR_ID>
+ADMIN_TAG=<YOUR_TAG>
+CHANNEL_GENERAL=<ID_CHANNEL_GENERAL>
+CHANNEL_WELCOME=<ID_CHANNEL_WELCOME>
+CHANNEL_ERRORS=<ID_CHANNEL_ERRORS>
+CHANNEL_ACTIONS=<ID_CHANNEL_ACTIONS>
