Buy command added

--- a/config.env
+++ b/config.env
@@ -6,3 +6,4 @@ CHANNEL_GENERAL=<ID_CHANNEL_GENERAL>
 CHANNEL_WELCOME=<ID_CHANNEL_WELCOME>
 CHANNEL_ERRORS=<ID_CHANNEL_ERRORS>
 CHANNEL_ACTIONS=<ID_CHANNEL_ACTIONS>
+CHANNEL_SHOP=<ID_CHANNEL_SHOP>
